Update gallery to show images that need doin

--- a/src/gallery.njk
+++ b/src/gallery.njk
@@ -3,14 +3,9 @@ layout: page.njk
 title: Gallery
 bodyClasses: max-width-100
 ---
-{% set count = 0 %}
-{% for image in collections.gallery %}
-    {% if image.alt === " " %}
-        {% set count = count + 1 %}
-    {% endif %}
-{% endfor %}
-Current progress:
-Alternative text written for {{ collections.gallery.length - count }} of {{ collections.gallery.length }} of images.
+<p>
+    Gallery only showing images that need alternative text: {{ collections.gallery.length }}.
+</p>
 {% macro gallery (images, headingLevel) %}
     <div class="gallery">
         {% for image in images %}
