--- a/src/index.njk
+++ b/src/index.njk
@@ -10,6 +10,16 @@ layout: base.njk
             in Government departments
         </small>
     </h1>
+    <div class="scene">
+        <div class="book">
+            <div class="back"></div>
+            <div class="top"></div>
+            <div class="spine"></div>
+            <div class="bottom"></div>
+            <div class="front"></div>
+            <div class="pages"></div>
+        </div>
+    </div>
 
     <hr />
 
