--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -71,7 +71,7 @@
         </p>
       {% endif %}
       <p>
-        Licensed under a <a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International&nbsp;License</a>.
+        Published under a <a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International&nbsp;License</a>.
       </p>
     </footer>
     <script src="/assets/scripts.js"></script>
