--- a/src/index.njk
+++ b/src/index.njk
@@ -3,7 +3,7 @@ layout: base.njk
 ---
 
 <main id="main" role="main">
-    <h1>
+    <h1 class="title">
         The Design<br />
         of Forms
         <small class="heading block upper spacing">
