improve footer styling

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -25,7 +25,7 @@
 
     {{ content | safe }}
 
-    <footer class="highlight-modern">
+    <footer>
       <fieldset class="js-visible" data-theme-select>
         <legend>Theme</legend>
         <div class="field">
