--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -56,6 +56,7 @@ body {
   font-size: 1.6rem;
   font-family: var(--font-family-serif);
   margin: 0;
+  padding: 2rem;
   padding: var(--verticle-page-margin) var(--horizontal-page-margin);
 }
 
@@ -625,7 +626,7 @@ label::after {
   white-space: nowrap;
 }
 
-.no-js .js-visible {
+[hidden] {
   display: none !important;
 }
 
