--- a/src/gallery.njk
+++ b/src/gallery.njk
@@ -1,7 +1,7 @@
 ---
 layout: page.njk
 title: Gallery
-bodyClasses: max-width-100
+mainClasses: max-width-100
 ---
 {% macro gallery (images, headingLevel) %}
     <div class="gallery">
