--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -19,6 +19,11 @@
     <p>
         Digitally remastered by <a href="https://nickcolley.co.uk">Nick Colley</a>
     </p>
+    <p>
+        <a href="https://github.com/nickcolley/design-of-forms">
+            Read the source code on GitHub.
+        </a>
+    </p>
     {% if pageNumber %}
         <p>
             This content appeared
