--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -27,7 +27,7 @@
         </p>
     {% endif %}
     <p>
-        Digitally remastered by <a href="https://nickcolley.co.uk">Nick Colley</a>
+        Digitally remastered by <a href="https://nickcolley.co.uk">Nick Colley</a>.
     </p>
     <p>
         Published under a <a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International&nbsp;License</a>.
